2008-02-25  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/ErrorWidget.cs: Always write the ErrorWidget by reusing the
	  xml that generated it, unless we are exporting to another format,
	  in which case we can't write the same xml, and we replace it by a
	  label. Fixes bug #362596.

2008-02-21  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/CecilClassDescriptor.cs: Don't create black boxes for
	  custom widgets which allow children. Fixes bug #361650.
	* libsteticui/ContextMenu.cs: Dont show invisible commands.
	* libstetic/wrapper/Frame.cs, libstetic/wrapper/Table.cs,
	  libstetic/wrapper/Paned.cs, libstetic/wrapper/Box.cs,
	  libstetic/wrapper/ScrolledWindow.cs, libstetic/wrapper/Expander.cs,
	  libstetic/wrapper/Notebook.cs: Don't add placeholders if they are
	  not allowed.
	* libstetic/wrapper/Container.cs: Don't allow placeholders if a
	  container can't have children.
	* libstetic/wrapper/objects.xml: Hide commands not allowed when
	  containers does not allow children.

2008-02-20  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/ActionComponent.cs, libstetic/wrapper/Action.cs: Added wrapper
	  properties for Label and StockId, since the notify event is not being
	  fired for Gtk.Action.
	* libstetic/editor/ActionMenuItem.cs, libstetic/editor/ActionToolItem.cs:
	  Use new Action wrapper properties to access to the label and stock id.

2008-02-06  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/SignalsEditorBackend.cs: TargetObject can't be set when no
	  project is selected.

2008-01-25  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/PropertyTree.cs: Use a theme color for the property group
	  headers. Fixes bug #356244.

2008-01-25  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/wrapper/Label.cs: Fix generation of MnemonicWidget property
	  assignment.
	* libstetic/wrapper/objects.xml: The default way of 
	* libstetic/editor/WidgetSelector.cs: Sort the list of widgets. Hide
	  unselectable widgets.
